--- a/root/home/victor/.config/gtk-3.0/gtk.css
+++ b/root/home/victor/.config/gtk-3.0/gtk.css
@@ -1,17 +1,62 @@
-@define-color accent_color #006a68;
-@define-color accent_fg_color #ffffff;
-@define-color accent_bg_color #006a68;
-@define-color window_bg_color #f7f9ff;
-@define-color window_fg_color #151c23;
-@define-color headerbar_bg_color #d3dbe5;
-@define-color headerbar_fg_color #151c23;
-@define-color popover_bg_color #d3dbe5;
-@define-color popover_fg_color #151c23;
-@define-color view_bg_color #f7f9ff;
-@define-color view_fg_color #151c23;
-@define-color card_bg_color #f7f9ff;
-@define-color card_fg_color #151c23;
-@define-color sidebar_bg_color @window_bg_color;
-@define-color sidebar_fg_color @window_fg_color;
-@define-color sidebar_border_color @window_bg_color;
-@define-color sidebar_backdrop_color @window_bg_color;
+/***
+ *    ┳┳┓┏┓┏┳┓┳┳┏┓┏┓┳┓  ┏┓┏┳┓┓┏┓
+ *    ┃┃┃┣┫ ┃ ┃┃┃┓┣ ┃┃━━┃┓ ┃ ┃┫
+ *    ┛ ┗┛┗ ┻ ┗┛┗┛┗┛┛┗  ┗┛ ┻ ┛┗┛
+ *
+ */
+
+@define-color accent_color #3a608f;
+@define-color accent_bg_color #d3e3ff;
+@define-color accent_fg_color #001c38;
+@define-color destructive_color #ba1a1a;
+@define-color destructive_bg_color #ffdad6;
+@define-color destructive_fg_color #410002;
+@define-color success_color #545f70;
+@define-color success_bg_color #d8e3f8;
+@define-color success_fg_color #111c2b;
+@define-color warning_color #6d5677;
+@define-color warning_bg_color #f5d9ff;
+@define-color warning_fg_color #261430;
+@define-color error_color #ba1a1a;
+@define-color error_bg_color #ffdad6;
+@define-color error_fg_color #410002;
+@define-color window_bg_color #f8f9ff;
+@define-color window_fg_color #191c20;
+@define-color view_bg_color #f8f9ff;
+@define-color view_fg_color #191c20;
+@define-color headerbar_bg_color @window_bg_color;
+@define-color headerbar_fg_color @window_fg_color;
+@define-color headerbar_border_color @window_bg_color;
+@define-color headerbar_backdrop_color @window_bg_color;
+@define-color headerbar_shade_color @window_bg_color;
+@define-color card_bg_color #e7e8ee;
+@define-color card_fg_color #191c20;
+@define-color card_shade_color rgba(0, 0, 0, 0.07);
+@define-color dialog_bg_color @card_bg_color;
+@define-color dialog_fg_color @card_fg_color;
+@define-color popover_bg_color @card_bg_color;
+@define-color popover_fg_color @card_fg_color;
+@define-color shade_color rgba(0, 0, 0, 0.36);
+@define-color scrollbar_outline_color rgba(139, 145, 152, 0.5);
+@define-color sidebar_bg_color #f2f3fa;
+@define-color secondary_sidebar_bg_color @sidebar_bg_color;
+@define-color sidebar_backdrop_color @sidebar_bg_color;
+@define-color secondary_sidebar_backdrop_color @sidebar_bg_color;
+
+.navigation-sidebar {
+	background-color: @sidebar_bg_color;
+	color: @window_fg_color;
+}
+
+
+headerbar.default-decoration {
+  /* You may need to tweak these values depending on your GTK theme */
+  margin-bottom: 50px;
+  margin-top: -100px;
+}
+
+/* rm -rf window shadows */
+window.csd,             /* gtk4? */
+window.csd decoration { /* gtk3 */
+  box-shadow: none;
+}
